# book_writer_using_crewAI

./: .env  README.md  pyproject.toml
src/bookwriter/: __init__.py  agents.py  main.py  main_streamlit.py  output.md  tasks.py
